# wasm_embedded

./: .gitignore  CMakeLists.txt  Makefile  main.c
factory/: Makefile  utils.py  wasm_factory.c  wasm_from_factory_bin.wasm
source/: CMakeLists.txt  binary_management.c  binary_management.h
source/extra/: somme_rust.wasm  sum_c.wasm  wasm_from_factory.h
